# pac25-hal

./: Cargo.toml  LICENSE  README.md
.cargo/: config.toml
examples/: blinky.rs  input.rs  watchdog.rs
src/: crc.rs  gpio.rs  lib.rs  prelude.rs  uart.rs  watchdog.rs
src/gpio/: convert.rs  pac25.rs
src/scc/: config.rs  mod.rs
src/ssp/: config.rs  mod.rs
