[package]
name = "pac25-hal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
defmt = { version = "0.3.5", optional = true }
embedded-hal = { version = "0.2.7", features = ["unproven"] }
fugit = "0.3.7"
pac25 = { version = "0.1.2", features = ["pac25140"] }

[package.metadata.docs.rs]
features = ["pac25140", "rt", "critical-section"]
targets = ["thumbv7em-none-eabihf"]
rustc-args = ["--cfg", "docsrs"]

[features]
device-selected = []

# Device features
pac25140 = [
    "pac25/pac25140",
    "device-selected",
    "gpiod",
    "gpioe",
    "gpiof",
    "gpiog",
]

# Peripheral features
gpioa = []
gpiob = []
gpioc = []
gpiod = []
gpioe = []
gpiof = []
gpiog = []

# Optional extras
defmt = ["dep:defmt", "fugit/defmt"]

[dev-dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.3"
defmt = "0.3.5"
defmt-rtt = "0.4.0"
panic-probe = "0.3.1"

[[example]]
name = "blinky"
required-features = ["defmt"]
